syntax = "proto3";
package prismfinance.prismcore.icq;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/prism-finance/prism-core/x/icq/types";

message InterchainQuery {
  string id = 1;
  string connection_id = 2;
  string chain_id = 3;
  string query_type = 4;
  bytes request = 5;
  // The period in which the requested query is needed FIXME remove?
  string period = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // The last height that the query is processed FIXME remove?
  string last_height = 7 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string callback_id = 8;
  // The number of blocks in which the query's result is valid FIXME remove?
  uint64 ttl = 9;
  // The last time that an event is emitted for this query. FIXME remove?
  string last_emission = 10 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message DataPoint {
  string id = 1;
  // change these to uint64 in v0.5.0
  string remote_height = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string local_height = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  bytes value = 4 [(gogoproto.jsontag) = "result,omitempty"];
}
